# QtDesignerCreatorFlow

./: CMakeLists.txt  Main.qml  README.md
Bal/: BalData.cpp  BalData.h  BalDataPrivate.cpp  BalDataPrivate.h  BalDataPrivate.py  CMakeLists.txt  lclStor.py  mytype.cpp  mytype.h
Bal/RtMidiRouterLib/: CMakeLists.txt  MidiClientClass.cpp  MidiClientClass.h  MidiServerClass.cpp  MidiServerClass.h
Bal/RtMidiRouterLib/MidiClient/: CMakeLists.txt  Dropdownlist.cpp  Dropdownlist.h  Dropdownlist.py  MidiClientConnection.cpp  MidiClientConnection.h  MidiClientConnectionPrivate.cpp  MidiClientConnectionPrivate.h  MidiClientConnectionPrivate.py  MidiClientUtil.cpp  MidiClientUtil.h  MidiRouteInput.cpp  MidiRouteInput.h  MidiRouteInputPrivate.cpp  MidiRouteInputPrivate.h  MidiRouteInputPrivate.py  MidiRoutePreset.cpp  MidiRoutePreset.h  MidiRoutePresetPrivate.cpp  MidiRoutePresetPrivate.h  MidiRoutePresetPrivate.py  PresetMidiControl.cpp  PresetMidiControl.h  PresetMidiControlPrivate.cpp  PresetMidiControlPrivate.h  PresetMidiControlPrivate.py  UserDataConfig.cpp  UserDataConfig.h  UserDataConfigPrivate.cpp  UserDataConfigPrivate.h  UserDataConfigPrivate.py  property.py
Bal/RtMidiRouterLib/libs/QWebchannelCppClient/: WebChannelClient.cpp  WebChannelClient.h
Bal/RtMidiRouterLib/libs/websocket/: websocketclientwrapper.h  websockettransport.h
Design/: Design.qmlproject  Design.qmlproject.qtds  qds.cmake  qtquickcontrols2.conf
Design/App/autogen/: environment.h
Design/Bal/: BalData.qml  CMakeLists.txt  MyType.qml  qmldir
Design/Core/: CMakeLists.txt  qmldir
Design/Design/: CMakeLists.txt  Constants.qml
Design/DesignContent/: App.qml  CMakeLists.txt  FormGroupBox.qml  Screen01.qml  qmldir
